k8s/bff-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: bff
  labels:
    app: bff
spec:
  replicas: 1
  minReadySeconds: 30
  progressDeadlineSeconds: 420
  selector:
    matchLabels:
      app: bff
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxSurge: 25%
      maxUnavailable: 0
  template:
    metadata:
      labels:
        app: bff
    spec:
      restartPolicy: Always
      terminationGracePeriodSeconds: 30
      containers:
        - name: bff
          image: gcr.io/mach-2021/bff:2021.01.24.6.main
          command: [ "java",
                     "-XX:MaxRAMPercentage=60", "-XX:+AlwaysActAsServerClassMachine",
                     "-jar", "app.jar" ]
          imagePullPolicy: Always
          ports:
            - containerPort: 8084
          resources:
            limits:
              memory: "1Gi"
              cpu: "750m"
            requests:
              memory: "100M"
              cpu: "250m"
          readinessProbe:
            httpGet:
              path: /actuator/health/readiness
              port: 8084
            failureThreshold: 20
            initialDelaySeconds: 170
            periodSeconds: 5
            timeoutSeconds: 1
          livenessProbe:
            httpGet:
              path: /actuator/health/liveness
              port: 8084
            failureThreshold: 3
            initialDelaySeconds: 170
            periodSeconds: 60
            timeoutSeconds: 2
          volumeMounts:
            - name: gcp-service-account-key
              mountPath: "/etc/keys"
              readOnly: true
      volumes:
        - name: gcp-service-account-key
          secret:
            secretName: gcp-service-account
