k8s/bff-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: bff
  labels:
    app: bff
spec:
  selector:
    app: bff
  ports:
  - port: 80
    protocol: TCP
    targetPort: 8084
  type: LoadBalancer
